--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,104 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+*,
+*::before,
+*::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+}
+
+body {
+  background: #2b2d42;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
+  color: #fff;
+  padding-bottom: 5em;
+  padding-top: 3em;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1,
+h2 {
+  color: #fff;
+}
+
+ul {
+  padding-left: 1.75em;
+  margin-top: 1rem;
+  color: #a9a9a9;
+}
+
+input {
+  width: 100%;
+  border-radius: 0.5em;
+  outline: none;
+  border: none;
+  padding: 0.75em 1.25em;
+}
+
+button {
+  padding: 0.75em 1.25em;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.5em;
+  background: #00b4d8;
+  color: #fff;
+  font-weight: bold;
+}
+
+/* kanyeQuote style */
+.kanyeQuote__head {
+  display: flex;
+}
+
+.kanyeQuote__head h3 {
+  color: #a9a9a9;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.kanyeQuote__head img {
+  width: 100%;
+  max-width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 2rem;
+}
+
+.kanyeQuote__btnContainer {
+  margin-top: 1rem;
+}
+
+.kanyeQuote__btnContainer > button:last-child {
+  margin-left: 0.5rem;
+  background: #d62828;
+}
+
+.kanyeQuote__favorite {
+  margin-block: 2rem;
+}
+
+/* personal quote */
+.personalQuote form {
+  display: flex;
+  width: 100%;
+}
+
+.personalQuote form input {
+  max-width: 15rem;
+}
+
+.personalQuote button {
+  margin-left: 1rem;
 }
